# fast_rich

./: .gitignore  Justfile  pyproject.toml
rust/: Cargo.toml
rust/src/: lib.rs  width_table.rs
scripts/: gen_width_table.py
src/fastrich/: __init__.py  align.py  bar.py  box.py  columns.py  console.py  markup.py  measure.py  padding.py  panel.py  progress.py  rule.py  segment.py  spinner.py  style.py  table.py  text.py  wrap.py
src/fastrich/_width/: __init__.py  _width_py.py  _width_table.py
tests/: test_byte_cache.py  test_composition.py  test_console.py  test_layout.py  test_markup.py  test_measure.py  test_progress.py  test_rs_parity.py  test_segment.py  test_style.py  test_table.py  test_text.py  test_width.py  test_wrap.py
