[build-system]
requires = ["uv_build>=0.11.19,<0.12"]
build-backend = "uv_build"

[project]
name = "fastrich"
version = "0.1.0"
description = "A fast, lean terminal-rendering library"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
  "prek>=0.4.5,<1.0.0",
  "pytest>=9.0.3,<10.0.0",
  "pytest-cov>=7.1.0,<8.0.0",
  "ruff>=0.15.18,<0.16.0",
  "rust-just>=1.53.0,<2.0.0",
  "ty>=0.0.51,<1.0.0"
]

[tool.uv.build-backend]
module-name = "fastrich"

[tool.pytest.ini_options]
testpaths = ["tests"]
