[build-system]
requires = ["uv_build>=0.11.19,<0.12"]
build-backend = "uv_build"

[project]
name = "fastrich"
version = "0.1.0"
description = "A fast, lean terminal-rendering library"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
  "import-linter>=2.0,<3.0",
  "prek>=0.4.5,<1.0.0",
  "pytest>=9.0.3,<10.0.0",
  "pytest-cov>=7.1.0,<8.0.0",
  "rich>=15.0.0,<16.0.0",
  "ruff>=0.15.18,<0.16.0",
  "rust-just>=1.53.0,<2.0.0",
  "ty>=0.0.52,<1.0.0"
]

[tool.uv.build-backend]
module-name = "fastrich"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.importlinter]
root_package = "fastrich"

[[tool.importlinter.contracts]]
name = "Public render stack is layered (console -> text -> segment -> style)"
type = "layers"
layers = [
    "panel",
    "padding",
    "rule",
    "markup",
    "table",
    "console",
    "text",
    "wrap",
    "segment",
    "style",
    "box",
]
containers = ["fastrich"]
ignore_imports = [
    "fastrich.text -> fastrich.markup",
]

[[tool.importlinter.contracts]]
name = "Width engine depends on nothing public"
type = "forbidden"
source_modules = ["fastrich._width"]
forbidden_modules = [
  "fastrich.style",
  "fastrich.text",
  "fastrich.console",
]
