[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "fastrich"
version = "0.1.0"
description = "A fast, lean terminal-rendering library"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
  "import-linter>=2.0,<3.0",
  "prek>=0.4.5,<1.0.0",
  "pytest>=9.0.3,<10.0.0",
  "pytest-cov>=7.1.0,<8.0.0",
  "rich>=15.0.0,<16.0.0",
  "ruff>=0.15.19,<0.16.0",
  "rust-just>=1.54.0,<2.0.0",
  "ty>=0.0.53,<1.0.0"
]

[tool.maturin]
python-source = "src"
manifest-path = "rust/Cargo.toml"
module-name = "fastrich._width._width_rs"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.importlinter]
root_package = "fastrich"
exclude_type_checking_imports = true

[[tool.importlinter.contracts]]
name = "Public render stack: (panel/columns/align/padding/rule/markup → table → console → text → wrap → segment → style → box)"
type = "layers"
layers = [
    "panel",
    "columns",
    "align",
    "padding",
    "rule",
    "markup",
    "table",
    "console",
    "text",
    "wrap",
    "measure",
    "segment",
    "style",
    "box",
]
containers = ["fastrich"]
ignore_imports = [
    "fastrich.text -> fastrich.markup",
]

[[tool.importlinter.contracts]]
name = "Width engine depends on nothing public"
type = "forbidden"
source_modules = ["fastrich._width"]
forbidden_modules = [
  "fastrich.style",
  "fastrich.text",
  "fastrich.console",
]
